Prevented the presenataion title from pushing the dropdown menu off-screen on Firefox

--- a/bigbluebutton-html5/imports/ui/components/nav-bar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/nav-bar/styles.scss
@@ -33,7 +33,10 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-
+  @include mq("(max-height:#{upper-bound($small-range)}), #{$small-only}") {
+    max-width: 70vw;
+  }
+  
   > [class^="icon-bbb-"] {
     font-size: 75%;
   }
